--- a/demo/drkey/BUILD.bazel
+++ b/demo/drkey/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary")
+load("@rules_go//go:def.bzl", "go_binary")
 load("//:scion.bzl", "scion_go_binary")
 load("//acceptance/common:topogen.bzl", "topogen_test")
 load("//tools/lint:go.bzl", "go_library")
