--- a/acceptance/router_benchmark/brload/BUILD.bazel
+++ b/acceptance/router_benchmark/brload/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
     importpath = "github.com/scionproto/scion/acceptance/router_benchmark/brload",
     visibility = ["//visibility:private"],
     deps = select({
-        "@io_bazel_rules_go//go/platform:android": [
+        "@rules_go//go/platform:android": [
             "//acceptance/router_benchmark/cases:go_default_library",
             "//pkg/log:go_default_library",
             "//pkg/private/serrors:go_default_library",
@@ -23,7 +23,7 @@ go_library(
             "@com_github_spf13_cobra//:go_default_library",
             "@org_golang_x_sys//unix:go_default_library",
         ],
-        "@io_bazel_rules_go//go/platform:linux": [
+        "@rules_go//go/platform:linux": [
             "//acceptance/router_benchmark/cases:go_default_library",
             "//pkg/log:go_default_library",
             "//pkg/private/serrors:go_default_library",
