--- a/proto/control_plane/experimental/v1/BUILD.bazel
+++ b/proto/control_plane/experimental/v1/BUILD.bazel
@@ -6,6 +6,6 @@ proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//proto/crypto/v1:crypto",
-        "@com_google_protobuf//:timestamp_proto",
+        "@protobuf//:timestamp_proto",
     ],
 )
