--- a/tools/udpproxy/BUILD.bazel
+++ b/tools/udpproxy/BUILD.bazel
@@ -1,6 +1,6 @@
 load("//tools/lint:go.bzl", "go_library")
 load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
-load("@io_bazel_rules_go//go:def.bzl", "go_binary")
+load("@rules_go//go:def.bzl", "go_binary")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
