revert to using old name for rules_go

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,7 +2,7 @@ load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
 load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 load("@gazelle//:def.bzl", "gazelle")
 load("@npm//private/mgmtapi/tools:@stoplight/spectral-cli/package_json.bzl", spectral_bin = "bin")
-load("@rules_go//go:def.bzl", "nogo")
+load("@io_bazel_rules_go//go:def.bzl", "nogo")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("//:nogo.bzl", "nogo_deps")
 load("//tools/lint:go_config.bzl", "go_lint_config")
