--- a/.bazelrc
+++ b/.bazelrc
@@ -29,7 +29,7 @@ build:osx --define gotags=sqlite_modernc
 test --build_tests_only --print_relative_test_log_paths --test_output=errors --nobuild_python_zip --spawn_strategy=remote,worker,processwrapper-sandbox,local
 
 ### predefined configurations (use with --config, eg. `bazel test --config=unit_all`)
-test:race --@rules_go//go/config:race
+test:race --@io_bazel_rules_go//go/config:race
 test:unit --test_tag_filters=unit
 test:unit_all --config=unit //...
 
