--- a/dispatcher/cmd/dispatcher/BUILD.bazel
+++ b/dispatcher/cmd/dispatcher/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
     importpath = "github.com/scionproto/scion/dispatcher/cmd/dispatcher",
     visibility = ["//visibility:private"],
     deps = select({
-        "@rules_go//go/platform:android": [
+        "@io_bazel_rules_go//go/platform:android": [
             "//dispatcher:go_default_library",
             "//dispatcher/config:go_default_library",
             "//dispatcher/mgmtapi:go_default_library",
@@ -23,7 +23,7 @@ go_library(
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
         ],
-        "@rules_go//go/platform:darwin": [
+        "@io_bazel_rules_go//go/platform:darwin": [
             "//dispatcher:go_default_library",
             "//dispatcher/config:go_default_library",
             "//dispatcher/mgmtapi:go_default_library",
@@ -39,7 +39,7 @@ go_library(
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
         ],
-        "@rules_go//go/platform:ios": [
+        "@io_bazel_rules_go//go/platform:ios": [
             "//dispatcher:go_default_library",
             "//dispatcher/config:go_default_library",
             "//dispatcher/mgmtapi:go_default_library",
@@ -55,7 +55,7 @@ go_library(
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
         ],
-        "@rules_go//go/platform:linux": [
+        "@io_bazel_rules_go//go/platform:linux": [
             "//dispatcher:go_default_library",
             "//dispatcher/config:go_default_library",
             "//dispatcher/mgmtapi:go_default_library",
