--- a/pkg/proto/crypto/BUILD.bazel
+++ b/pkg/proto/crypto/BUILD.bazel
@@ -1,8 +1,8 @@
-load("@rules_go//proto:def.bzl", "go_proto_library")
+load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 go_proto_library(
     name = "go_default_library",
-    compiler = "@rules_go//proto:go_grpc",
+    compiler = "@io_bazel_rules_go//proto:go_grpc",
     importpath = "github.com/scionproto/scion/pkg/proto/crypto",
     proto = "//proto/crypto/v1:crypto",
     visibility = ["//visibility:public"],
