--- a/private/app/launcher/BUILD.bazel
+++ b/private/app/launcher/BUILD.bazel
@@ -22,52 +22,52 @@ go_library(
         "@com_github_spf13_cobra//:go_default_library",
         "@com_github_spf13_viper//:go_default_library",
     ] + select({
-        "@rules_go//go/platform:aix": [
+        "@io_bazel_rules_go//go/platform:aix": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:android": [
+        "@io_bazel_rules_go//go/platform:android": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:darwin": [
+        "@io_bazel_rules_go//go/platform:darwin": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:dragonfly": [
+        "@io_bazel_rules_go//go/platform:dragonfly": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:freebsd": [
+        "@io_bazel_rules_go//go/platform:freebsd": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:illumos": [
+        "@io_bazel_rules_go//go/platform:illumos": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:ios": [
+        "@io_bazel_rules_go//go/platform:ios": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:js": [
+        "@io_bazel_rules_go//go/platform:js": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:linux": [
+        "@io_bazel_rules_go//go/platform:linux": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:netbsd": [
+        "@io_bazel_rules_go//go/platform:netbsd": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:openbsd": [
+        "@io_bazel_rules_go//go/platform:openbsd": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:osx": [
+        "@io_bazel_rules_go//go/platform:osx": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:plan9": [
+        "@io_bazel_rules_go//go/platform:plan9": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:qnx": [
+        "@io_bazel_rules_go//go/platform:qnx": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:solaris": [
+        "@io_bazel_rules_go//go/platform:solaris": [
             "//private/app:go_default_library",
         ],
-        "@rules_go//go/platform:windows": [
+        "@io_bazel_rules_go//go/platform:windows": [
             "@org_golang_x_sys//windows/svc:go_default_library",
             "@org_golang_x_sys//windows/svc/debug:go_default_library",
             "@org_golang_x_sys//windows/svc/eventlog:go_default_library",
