--- a/private/underlay/sockctrl/BUILD.bazel
+++ b/private/underlay/sockctrl/BUILD.bazel
@@ -11,52 +11,52 @@ go_library(
     importpath = "github.com/scionproto/scion/private/underlay/sockctrl",
     visibility = ["//visibility:public"],
     deps = select({
-        "@rules_go//go/platform:aix": [
+        "@io_bazel_rules_go//go/platform:aix": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:android": [
+        "@io_bazel_rules_go//go/platform:android": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:darwin": [
+        "@io_bazel_rules_go//go/platform:darwin": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:dragonfly": [
+        "@io_bazel_rules_go//go/platform:dragonfly": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:freebsd": [
+        "@io_bazel_rules_go//go/platform:freebsd": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:illumos": [
+        "@io_bazel_rules_go//go/platform:illumos": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:ios": [
+        "@io_bazel_rules_go//go/platform:ios": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:js": [
+        "@io_bazel_rules_go//go/platform:js": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:linux": [
+        "@io_bazel_rules_go//go/platform:linux": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:netbsd": [
+        "@io_bazel_rules_go//go/platform:netbsd": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:openbsd": [
+        "@io_bazel_rules_go//go/platform:openbsd": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:osx": [
+        "@io_bazel_rules_go//go/platform:osx": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:plan9": [
+        "@io_bazel_rules_go//go/platform:plan9": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:qnx": [
+        "@io_bazel_rules_go//go/platform:qnx": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:solaris": [
+        "@io_bazel_rules_go//go/platform:solaris": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@rules_go//go/platform:windows": [
+        "@io_bazel_rules_go//go/platform:windows": [
             "//pkg/private/serrors:go_default_library",
         ],
         "//conditions:default": [],
