--- a/proto/crypto/v1/BUILD.bazel
+++ b/proto/crypto/v1/BUILD.bazel
@@ -6,5 +6,5 @@ proto_library(
         "signed.proto",
     ],
     visibility = ["//visibility:public"],
-    deps = ["@protobuf//:timestamp_proto"],
+    deps = ["@com_google_protobuf//:timestamp_proto"],
 )
