ran a command to update the //:write_all_source_files target + added dependencies for it

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -20,7 +20,7 @@ linter.configure(
 use_repo(linter, "apple_linters")
 
 # Bazel rules for Golang
-bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go") # have to use the old name as buildtools still use it
+bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")  # have to use the old name as buildtools still use it
 single_version_override(
     module_name = "rules_go",
     patches = ["//patches:io_bazel_rules_go/import.patch"],
@@ -49,6 +49,11 @@ go_deps.module(
     sum = "h1:zrpB8NIzy1hkO1dz2S+YWiOymA/2kL3Rk24uDg8DVUM=",
     version = "v0.0.0-20190618100136-198c6a326229",
 )
+go_deps.module(
+    path = "github.com/golang/protobuf",
+    sum = "h1:i7eJL8qZTpSEXOPTxNKhASYpMn+8e5Q6AdndVa1dWek=",
+    version = "v1.5.4",
+)
 use_repo(
     go_deps,
     "at_zgo_zcache_v2",
@@ -62,6 +67,7 @@ use_repo(
     "com_github_go_chi_chi_v5",
     "com_github_go_chi_cors",
     "com_github_golang_mock",
+    "com_github_golang_protobuf",
     "com_github_google_go_cmp",
     "com_github_gopacket_gopacket",
     "com_github_grpc_ecosystem_go_grpc_middleware",
