--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ __pycache__
 #########################
 .vscode/
 
+# GoLand folder
+.ijwb/
+
 # build files
 #########################
 .installstamp
