--- a/private/underlay/conn/BUILD.bazel
+++ b/private/underlay/conn/BUILD.bazel
@@ -1,8 +1,9 @@
-load("//tools/lint:go.bzl", "go_library")
+load("//tools/lint:go.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
     srcs = [
+        "address.go",
         "conn.go",
         "flags.go",
         "flags_linux.go",
@@ -16,4 +17,11 @@ go_library(
         "@org_golang_x_net//ipv4:go_default_library",
         "@org_golang_x_net//ipv6:go_default_library",
     ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["address_test.go"],
+    embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
