--- a/gateway/dataplane/BUILD.bazel
+++ b/gateway/dataplane/BUILD.bazel
@@ -50,7 +50,10 @@ go_test(
         "session_test.go",
         "worker_test.go",
     ],
-    data = glob(["testdata/**"]),
+    data = glob(
+        ["testdata/**"],
+        allow_empty = True,
+    ),
     embed = [":go_default_library"],
     deps = [
         "//gateway/control:go_default_library",
