--- a/pkg/private/util/BUILD.bazel
+++ b/pkg/private/util/BUILD.bazel
@@ -24,7 +24,10 @@ go_test(
         "export_test.go",
         "time_test.go",
     ],
-    data = glob(["testdata/**"]),
+    data = glob(
+        ["testdata/**"],
+        allow_empty = True,
+    ),
     embed = [":go_default_library"],
     deps = [
         "@com_github_stretchr_testify//assert:go_default_library",
