--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -143,31 +143,31 @@ use_repo(pnpm, "pnpm")
 # Python rules
 bazel_dep(name = "rules_python", version = "1.0.0")
 
-#python = use_extension("@rules_python//python/extensions:python.bzl", "python")
-#python.toolchain(
-#    configure_coverage_tool = True,
-#    python_version = "3.13",
-#)
+python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+python.toolchain(python_version = "3.12")
 
 pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
 pip.parse(
     hub_name = "scion_python_deps",
-    python_version = "3.11",
+    python_version = "3.12",
     requirements_lock = "//tools/env/pip3:requirements.txt",
 )
-use_repo(pip, "scion_python_deps")
 pip.parse(
     hub_name = "scion_python_lint_deps",
-    python_version = "3.11",
+    python_version = "3.12",
     requirements_lock = "//tools/lint/python:requirements.txt",
 )
-use_repo(pip, "scion_python_lint_deps")
 pip.parse(
     hub_name = "scion_python_doc_deps",
-    python_version = "3.11",
+    python_version = "3.12",
     requirements_lock = "//doc:requirements.txt",
 )
-use_repo(pip, "scion_python_doc_deps")
+use_repo(
+    pip,
+    "scion_python_deps",
+    "scion_python_lint_deps",
+    "scion_python_doc_deps",
+)
 
 # Rules for container image building
 bazel_dep(name = "rules_oci", version = "1.8.0")
