--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -252,5 +252,5 @@ bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
-bazel_dep(name = "protobuf", version = "29.3")  #30.1
+bazel_dep(name = "protobuf", version = "30.1")
 bazel_dep(name = "rules_shell", version = "0.4.0")
