--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -205,7 +205,7 @@ use_repo(find_rpm, "rules_pkg_rpmbuild")
 register_toolchains("@rules_pkg_rpmbuild//:all")
 
 # Debian rules
-bazel_dep(name = "rules_distroless", version = "0.3.8")  # 0.5.1
+bazel_dep(name = "rules_distroless", version = "0.5.1")
 
 apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
 apt.install(
