--- a/acceptance/topo_daemon_reload/BUILD.bazel
+++ b/acceptance/topo_daemon_reload/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("//tools/lint:go.bzl", "go_test")
 
@@ -24,11 +24,17 @@ go_test(
 )
 
 # daemon container
-oci_tarball(
-    name = "daemon.tar",
+oci_load(
+    name = "daemon",
     format = "docker",
     image = ":daemon_image",
     repo_tags = ["scion/" + package_name() + ":daemon"],
+)
+
+filegroup(
+    name = "daemon.tar",
+    srcs = [":daemon"],
+    output_group = "tarball",
 )
 
 oci_image(
