update rules_oci to 2.2.3

--- a/docker/BUILD.bazel
+++ b/docker/BUILD.bazel
@@ -5,18 +5,18 @@ load(":tester.bzl", "scion_tester_image")
 filegroup(
     name = "prod",
     srcs = [
-        ":control.tar",
-        ":daemon.tar",
-        ":dispatcher.tar",
-        ":gateway.tar",
-        ":router.tar",
+        ":control.tarball",
+        ":daemon.tarball",
+        ":dispatcher.tarball",
+        ":gateway.tarball",
+        ":router.tarball",
     ],
 )
 
 filegroup(
     name = "test",
     srcs = [
-        ":tester.tar",
+        ":tester.tarball",
     ],
 )
 
