--- a/private/ca/api/BUILD.bazel
+++ b/private/ca/api/BUILD.bazel
@@ -8,7 +8,7 @@ openapi_generate_go(
     spec = False,
 )
 
-# exclude the *.gen.go filse in the workspace it's only for editor compatibility.
+# exclude the *.gen.go files in the workspace it's only for editor compatibility.
 # gazelle:exclude *.gen.go
 go_library(
     name = "go_default_library",
