--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -18,14 +18,14 @@ load("//tools/lint/python:flake8_config.bzl", "flake8_lint_config")
 # gazelle:exclude rules_openapi/tools/node_modules/**
 # gazelle:exclude tools/lint/**/testdata/src/**
 
-# We suport two sqlite implementations: modernc and mattn. Each implementation
+# We support two sqlite implementations: modernc and mattn. Each implementation
 # has a corresponding sqlite_<impl>.go "driver" in private/storage/db. Which
-# driver gets compiled and linked is controled by a go build tag: sqlite_mattn
+# driver gets compiled and linked is controlled by a go build tag: sqlite_mattn
 # or sqlite_modernc. Those are specified on the command line
 # with "--define gotags=sqlite_mattn" or "--define gotags=sqlite_modernc"
 # (see the build options in .bazelrc).
 #
-# Unfortunately Gazelle needs to be given these tags explicitly via the builtags
+# Unfortunately Gazelle needs to be given these tags explicitly via the build_tags
 # attribute. So, to ensure consistency we have to translate our two gotags into
 # build_tags. To that end, we create two config_setting flags that are
 # set in response to matching the gotags value and use them to select the relevant
