--- a/gateway/mgmtapi/BUILD.bazel
+++ b/gateway/mgmtapi/BUILD.bazel
@@ -13,7 +13,7 @@ openapi_generate_go(
     package = "mgmtapi",
 )
 
-# exclude the *.gen.go filse in the workspace it's only for editor compatibility.
+# exclude the *.gen.go files in the workspace it's only for editor compatibility.
 # gazelle:exclude *.gen.go
 go_library(
     name = "go_default_library",
