--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -220,7 +220,6 @@ non_module_deps = use_extension(":non_module_deps.bzl", "non_module_deps")
 use_repo(
     non_module_deps,
     "buf",
-    "com_github_bazelbuild_buildtools",
     "openwrt_x86_64_SDK",
     "rules_antlr",
 )
@@ -254,3 +253,4 @@ bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
 bazel_dep(name = "protobuf", version = "30.1")
 bazel_dep(name = "rules_shell", version = "0.4.0")
+bazel_dep(name = "buildifier_prebuilt", version = "8.0.1")
