--- a/spec/cppki.gen.yml
+++ b/spec/cppki.gen.yml
@@ -120,7 +120,7 @@ paths:
         control service. The result can be filtered by ISD-AS. Furthermore,
         one can pass a particular point in time at which the certificate
         chains are valid as input. A boolean can be provided to return all
-        certificates, regardless of their period of validity.
+        certificates, regardless of their period of vailidity.
       operationId: get-certificates
       parameters:
         - in: query
