fix: Use 2 space indentation for .yml files

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,10 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 4
 
+[*.yml]
+indent_style = space
+indent_size = 2
+
 [*.go]
 indent_style = tab
 
