fix: Use shared transit net and priv nets for ASes

--- a/doc/tutorials/deploy/base/Dockerfile
+++ b/doc/tutorials/deploy/base/Dockerfile
@@ -1,17 +1,24 @@
-FROM debian-systemd:1.0
+FROM debian:12-slim
 
 ARG RELEASE="https://github.com/scionproto/scion/releases/download/v0.12.0/scion_0.12.0_deb_amd64.tar.gz"
 
-# Prevent interactive prompts during package installation.
-ENV DEBIAN_FRONTEND=noninteractive
+# Tell systemd it's running inside Docker. Without this, systemd may emit warnings
+# and fail to boot certain units (especially networking-related).
+ENV container docker
 
-# Install dependencies (pin versions where possible).
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
+# Force debconf (called by apt-get) to be non-interactive.
+# This prevents interactive prompts during package installation.
+ENV DEBIAN_FRONTEND=noninteractive
+RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
+
+# Install dependencies.
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    systemd libcap2-bin \
     curl wget tar ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
-# Install SCION packages without sudo.
+# Install SCION packages. Eventually, also remove the apt cache files
+# stored under /var/lib/apt/lists/ to reduce the image size.
 RUN mkdir -p /tmp/scion/ && \
     wget --progress=dot:giga "$RELEASE" -O /tmp/scion/pkgs.tar.gz && \
     tar -xzf /tmp/scion/pkgs.tar.gz -C /tmp/scion/ && \
@@ -19,7 +26,16 @@ RUN mkdir -p /tmp/scion/ && \
     apt-get install -y --no-install-recommends $(find /tmp/scion -name '*.deb') && \
     rm -rf /tmp/scion /var/lib/apt/lists/*
 
-# Create configuration directories.
+# Copy systemd unit files
+COPY systemd/ /etc/systemd/system/
+
+# Enable required SCION services
+RUN systemctl enable scion-daemon.service \
+    scion-dispatcher.service \
+    scion-control@cs.service \
+    scion-router@br.service
+
+# Create SCION configuration directories.
 RUN mkdir -p \
     /etc/scion/crypto/as \
     /etc/scion/certs \
@@ -28,9 +44,6 @@ RUN mkdir -p \
 
 COPY br.toml /etc/scion/br.toml
 COPY cs.toml /etc/scion/cs.toml
-
-COPY entrypoint.bash /entrypoint.bash
-RUN chmod +x /entrypoint.bash
 
 WORKDIR /pki
 
