fix: Bind /sys/fs/cgroup

--- a/doc/tutorials/deploy/Makefile
+++ b/doc/tutorials/deploy/Makefile
@@ -34,3 +34,7 @@ up: build
 
 down:
 	docker compose down
+
+purge: down
+	docker ps -aq --filter "name=scion" | xargs -r docker rm -f
+	docker network ls -q --filter "name=sciontutorial" | xargs -r docker network rm
