--- a/doc/tutorials/deploy/base/systemd/scion-control.service
+++ b/doc/tutorials/deploy/base/systemd/scion-control.service
@@ -10,7 +10,7 @@ StartLimitIntervalSec=1s
 Type=simple
 User=scion
 Group=scion
-ExecStart=/usr/bin/scion-control --config /etc/scion/%i.toml
+ExecStart=/usr/bin/scion-control --config /etc/scion/cs.toml
 Restart=on-failure
 
 [Install]
