--- a/doc/tutorials/deploy/base/systemd/scion-router.service
+++ b/doc/tutorials/deploy/base/systemd/scion-router.service
@@ -9,7 +9,7 @@ StartLimitIntervalSec=1s
 Type=simple
 User=scion
 Group=scion
-ExecStart=/usr/bin/scion-router --config /etc/scion/%i.toml
+ExecStart=/usr/bin/scion-router --config /etc/scion/br.toml
 Restart=on-failure
 
 [Install]
