--- a/doc/tutorials/deploy/scion04/Dockerfile
+++ b/doc/tutorials/deploy/scion04/Dockerfile
@@ -18,3 +18,5 @@ RUN head -c 16 /dev/urandom | base64 > /etc/scion/keys/master0.key && \
 
 # Expose ports. (30041,50000 = underlay; 30441 = monitoring).
 EXPOSE 30041 50000 30441
+
+CMD ["/lib/systemd/systemd", "--unit=multi-user.target"]
