--- a/doc/tutorials/deploy/scion03/Dockerfile
+++ b/doc/tutorials/deploy/scion03/Dockerfile
@@ -2,7 +2,9 @@ FROM scion-base:1.0
 
 # Copy generated AS3 PKI from base image.
 RUN cp /opt/tutorial-pki/AS3/*.key /etc/scion/crypto/as/ && \
-    cp /opt/tutorial-pki/AS3/*.pem /etc/scion/crypto/as/
+    cp /opt/tutorial-pki/AS3/*.pem /etc/scion/crypto/as/ && \
+    chown scion:scion /etc/scion/crypto/as/*.key && \
+    chmod 600 /etc/scion/crypto/as/*.key
 
 # Copy AS3 topology and configuration files.
 COPY topology3.json /etc/scion/topology.json
