--- a/doc/tutorials/deploy/scion04/Dockerfile
+++ b/doc/tutorials/deploy/scion04/Dockerfile
@@ -2,7 +2,9 @@ FROM scion-base:1.0
 
 # Copy generated AS4 PKI from base image.
 RUN cp /opt/tutorial-pki/AS4/*.key /etc/scion/crypto/as/ && \
-    cp /opt/tutorial-pki/AS4/*.pem /etc/scion/crypto/as/
+    cp /opt/tutorial-pki/AS4/*.pem /etc/scion/crypto/as/ && \
+    chown scion:scion /etc/scion/crypto/as/*.key && \
+    chmod 600 /etc/scion/crypto/as/*.key
 
 # Copy AS4 topology and configuration files.
 COPY topology4.json /etc/scion/topology.json
