docs: add more specific links in systemd configs

--- a/doc/tutorials/deploy/base/systemd/scion-control.service
+++ b/doc/tutorials/deploy/base/systemd/scion-control.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=SCION Control Service
-Documentation=https://docs.scion.org
+Documentation=https://docs.scion.org/en/latest/manuals/control.html
 After=network-online.target scion-dispatcher.service
 Wants=scion-dispatcher.service
 StartLimitBurst=1
