--- a/doc/tutorials/deploy/base/systemd/scion-daemon.service
+++ b/doc/tutorials/deploy/base/systemd/scion-daemon.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=SCION Daemon
-Documentation=https://docs.scion.org
+Documentation=https://docs.scion.org/en/latest/manuals/daemon.html
 After=network-online.target scion-dispatcher.service
 Wants=scion-dispatcher.service
 StartLimitBurst=1
