--- a/doc/tutorials/deploy/base/systemd/scion-router.service
+++ b/doc/tutorials/deploy/base/systemd/scion-router.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=SCION Router
-Documentation=https://docs.scion.org
+Documentation=https://docs.scion.org/en/latest/manuals/router.html
 After=network-online.target
 StartLimitBurst=1
 StartLimitIntervalSec=1s
